<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
        app:title="@string/toolbar_title"
        app:titleCentered="true"
        app:titleTextColor="@color/black"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name_field"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/height"
                app:layout_constraintStart_toEndOf="@id/card"
                app:layout_constraintTop_toTopOf="@id/card" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hight"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/card"
                app:layout_constraintStart_toEndOf="@id/card"
                app:layout_constraintTop_toBottomOf="@id/text_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/weight"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/height"
                app:layout_constraintTop_toTopOf="@id/height" />

            <ImageView
                android:id="@+id/verified_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/verified"
                app:layout_constraintStart_toEndOf="@id/text_name"
                app:layout_constraintTop_toTopOf="@id/text_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="12:23 pm "
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/verified_icon"
                app:layout_constraintStart_toEndOf="@id/verified_icon"
                app:layout_constraintTop_toTopOf="@id/verified_icon" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/follow_icon"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:text="@string/follow"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:backgroundTint="#2F9133"
                app:layout_constraintBottom_toBottomOf="@id/card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/headline"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/description_main"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headline" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_card_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#BAAFAF"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/_2023" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_card_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toEndOf="@id/card_card_1"
                app:layout_constraintTop_toBottomOf="@id/description">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/todayismonday"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_card_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toEndOf="@id/card_card_2"
                app:layout_constraintTop_toBottomOf="@id/description">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/top"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_card_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toEndOf="@id/card_card_3"
                app:layout_constraintTop_toBottomOf="@id/description">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/pops"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_card_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_card_1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/wow"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_card_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toEndOf="@id/card_card_5"
                app:layout_constraintTop_toBottomOf="@id/card_card_1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/row"/>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_card_6" />

            <ImageView
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6sp"
                android:src="@drawable/outline_heart_broken_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

            <TextView
                android:id="@+id/no_of_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                app:layout_constraintStart_toEndOf="@id/like_button"
                app:layout_constraintTop_toTopOf="@id/like_button" />

            <ImageView
                android:id="@+id/commit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6sp"
                android:src="@drawable/outline_add_comment_24"
                app:layout_constraintStart_toEndOf="@id/no_of_likes"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

            <TextView
                android:id="@+id/no_of_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                app:layout_constraintStart_toEndOf="@id/commit_button"
                app:layout_constraintTop_toTopOf="@id/commit_button" />

            <ImageView
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6sp"
                android:src="@drawable/outline_save_24"
                app:layout_constraintStart_toEndOf="@id/no_of_comments"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

            <ImageView
                android:id="@+id/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6sp"
                android:src="@drawable/outline_more_horiz_24"
                app:layout_constraintStart_toEndOf="@id/save_button"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

            <View
                android:id="@+id/view_space"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="#ECE9E9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/like_button" />

            <include
                android:id="@+id/profile_description_1"
                layout="@layout/profile_description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_space" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


